--- a/src/main/cart/cart.module.css
+++ b/src/main/cart/cart.module.css
@@ -5,3 +5,42 @@
                  -10px -10px 20px #ffffff;
                  padding: 8px;
 }
+.addtocartContainer {
+    display: flex;
+    align-items: center;   
+    margin-top: 5vh;
+}
+.addtocart {
+    display: flex;
+    align-items: center;
+    margin-right: 10px;
+    border-radius: 3px;
+    border-radius: 5px;
+    background: #ffffff;
+    box-shadow:  6px 6px 12px #e8e8e8, 
+             -6px -6px 12px #ffffff;
+}
+.addtocart span {
+    padding: 10px 15px;
+    font-size: 14px;
+    font-weight: bold;
+}
+.signs {
+    font-size: 15px;
+    color: darkslategray;
+    cursor: pointer;
+}
+.button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-transform: uppercase;
+    padding: 11px;
+    width: 150px;
+    border-radius: 5px;
+    border-radius: 5px;
+    background: #21956c;
+    box-shadow:  0px 0px 4px #21946b, 0px 0px 4px #21966d;
+    border: none;
+    color: white;
+}
