--- a/src/main/main.module.css
+++ b/src/main/main.module.css
@@ -1,5 +1,38 @@
 .mainContainer {
     background-color: #fef9f3;
-    height: 80vh;
-    margin: 0 30px;
+    height: 88vh;
+    margin: 0 3vh;
+    padding: 12vh 15vh;
+    display: flex;
+    flex-wrap: wrap;
+}
+.firstRow {
+    flex: 0.4;
+}
+.secondRow {
+    flex: 0.45;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 50px;
+    border-radius: 100%;
+    height: 430px;
+    width: 400px;
+    background-color: #21956c;
+}
+.thirdRow {
+    flex: 0.2;
+    display: flex;
+    height: 70vh;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-evenly;
+}
+.image {
+    width: 100px;
+    object-fit: contain;
+}
+.description {
+    font-size: 14px;
+    line-height: 1.5rem;
 }
