--- a/src/app.module.css
+++ b/src/app.module.css
@@ -2,3 +2,9 @@
     overflow: hidden;
     height: 100vh;
 }
+
+@media screen and (max-width: 768px) {
+    .appContainer {
+        overflow: auto;
+    }
+}
