--- a/src/main/main.module.css
+++ b/src/main/main.module.css
@@ -4,7 +4,6 @@
     margin: 0 3vh;
     padding: 12vh 15vh;
     display: flex;
-    flex-wrap: wrap;
 }
 .firstRow {
     flex: 0.4;
@@ -29,10 +28,52 @@
     justify-content: space-evenly;
 }
 .image {
-    width: 100px;
     object-fit: contain;
+    border-radius: 100%;
+    height: 100px;
+    width: 100px;
 }
 .description {
     font-size: 14px;
     line-height: 1.5rem;
+}
+
+@media screen and (max-width: 768px){
+    .mainContainer {
+        padding: 4vh;
+        flex-direction: column;
+        align-items: flex-start;
+        height: auto;
+    }
+    .secondRow {
+        margin-left: 0;
+        margin-top: 50px;
+        height: 320px;
+        width: 320px;
+    }
+    .thirdRow {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        justify-content: flex-start;
+        order: -1;
+    }
+    .image {
+        height: 100px;
+        width: 100px;
+    }
+}
+
+@media screen and (max-width: 420px) {
+    .thirdRow {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        justify-content: space-evenly;
+        order: -1;
+    }
+    .image {
+        height: 50px;
+        width: 50px;
+    }
 }
